Refactor LadderGameApp and View classes for improved readability; remove commented code and streamline player management